--- a/data/config.example.json
+++ b/data/config.example.json
@@ -1,5 +1,5 @@
 {
   "ignore_countries": [],
   "ignore_isps": [],
-  "discord_webhook": "https://discord.com/api/webhooks/1401870427101593632/SmVyBt8fYSV1JOMgz35Ay-t8sYuHNgRwXXgaI7wm9K0ix_xnz4ralkpNVEFAmSQIp5No"
+  "discord_webhook": "Your Webhook Here :)"
 }
